--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -7,5 +7,8 @@
         <li>
             <a href="#"></a>
         </li>
+        <li>
+            <a href="{% url 'register'%}" style="color:gray; align:right">Registrar Vendedor</a>
+        </li>
     </ul>
 </div>
