--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
@@ -65,7 +65,7 @@
                 </table>
                 <br>
                 <div class='text-center'>
-                    <a id='opcion1' class='btn btn-lg' href='#'>Seleccionar</a>
+                    <a id='opcion1' class='btn btn-lg' href="{% url 'detalle_cotizacion' cotizaciones.0.pk %}">Seleccionar</a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 </table>
                 <br>
                 <div class='text-center'>
-                    <a id='opcion1' class='btn btn-lg' href='#'>Seleccionar</a>
+                    <a id='opcion1' class='btn btn-lg' href="{% url 'detalle_cotizacion' cotizaciones.1.pk %}">Seleccionar</a>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
                 </table>
                 <br>
                 <div class='text-center'>
-                    <a id='opcion1' class='btn btn-lg' href='#'>Seleccionar</a>
+                    <a id='opcion1' class='btn btn-lg' href="{% url 'detalle_cotizacion' cotizaciones.2.pk %}">Seleccionar</a>
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
                 </table>
                 <br>
                 <div class='text-center'>
-                    <a id='opcion1' class='btn btn-lg' href='#'>Seleccionar</a>
+                    <a id='opcion1' class='btn btn-lg' href="{% url 'detalle_cotizacion' cotizaciones.3.pk %}">Seleccionar</a>
                 </div>
             </div>
         </div>
