aqui esta todo listo, falta lo de oscar

--- a/cotizador_acerta/templates/base.html
+++ b/cotizador_acerta/templates/base.html
@@ -69,7 +69,7 @@
     <!-- ChartJs -->
     <script src="{% static 'js/plugins/chartjs/Chart.min.js' %}"></script>
 {% endblock script %}
-{% block custom_script %}{% endblock %}
+{% block custom_script %}{% endblock custom_script %}
 </div>
 </body>
 </html>
