--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -1,5 +1,15 @@
 {% extends "base.html" %}
+{% load humanize %}
 
+{# Load the tag library #}
+{% load bootstrap3 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
 
 {% block extracss %}
 
@@ -7,8 +17,8 @@
 
 
 {% block content %}
-<div class="row">
-    <div class="col-xs-12" style="padding-top: 30px;">
+<div class="row" style="padding-top: 10%">
+    <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-10 col-sm-10 col-md-2"></div>
             <div class="col-xs-12 col-sm-12 col-md-8 panel panel-default" style="border-width: 4px; border-color: 8CA5F0;">
@@ -29,42 +39,42 @@
                                 <td>Lesiones Corporales</td>
                                 <td>{{ cotizacion.lesiones_corporales }}</td>
                                 <td></td>
-                                <td>{{ cotizacion.prima_lesiones|floatformat:2 }}</td>
+                                <td>{{ cotizacion.prima_lesiones|floatformat:2|intcomma }}</td>
                               </tr>
                               <tr>
                                 <td>Daños a la Propiedad Ajena</td>
                                 <td>{{ cotizacion.danios_propiedad }}</td>
                                 <td></td>
-                                <td>{{ cotizacion.prima_daniosProp|floatformat:2 }}</td>
+                                <td>{{ cotizacion.prima_daniosProp|floatformat:2|intcomma }}</td>
                               </tr>
                               <tr>
                                 <td>Gastos Médicos por Accidente</td>
                                 <td>{{ cotizacion.gastos_medicos }}</td>
                                 <td></td>
-                                <td>{{ cotizacion.prima_gastosMedicos|floatformat:2 }}</td>
-                              </tr>
-                              <tr>
-                                <td>Colisión y Vuelco</td>
-                                <td>Suma Asegurada</td>
-                                <td>{{ cotizacion.colision_vuelco|floatformat:2 }}</td>
-                                <td>{{ cotizacion.prima_colisionVuelco|floatformat:2 }}</td>
+                                <td>{{ cotizacion.prima_gastosMedicos|floatformat:2|intcomma }}</td>
                               </tr>
                               <tr>
                                 <td>Otros Daños</td>
-                                <td>Suma Asegurada</td>
-                                <td>{{ cotizacion.otros_danios|floatformat:2 }}</td>
-                                <td>{{ cotizacion.prima_otrosDanios|floatformat:2 }}</td>
+                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
+                                <td>{{ cotizacion.otros_danios|floatformat:2|intcomma }}</td>
+                                <td>{{ cotizacion.prima_otrosDanios|floatformat:2|intcomma }}</td>
+                              </tr>
+                              <tr>
+                                <td>Colisión y Vuelco</td>
+                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
+                                <td>{{ cotizacion.colision_vuelco|floatformat:2|intcomma }}</td>
+                                <td>{{ cotizacion.prima_colisionVuelco|floatformat:2|intcomma }}</td>
                               </tr>
                               <tr>
                                 <td>Incendio y Rayo</td>
-                                <td>Suma Asegurada</td>
-                                <td>{{ cotizacion.incendio_rayo|floatformat:2 }}</td>
+                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
+                                <td>{{ cotizacion.incendio_rayo|floatformat:2|intcomma }}</td>
                                 <td>-</td>
                               </tr>
                               <tr>
                                 <td>Robo y Hurto</td>
-                                <td>Suma Asegurada</td>
-                                <td>{{ cotizacion.robo_hurto|floatformat:2 }}</td>
+                                <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
+                                <td>{{ cotizacion.robo_hurto|floatformat:2|intcomma }}</td>
                                 <td>-</td>
                               </tr>
                               <tr>
@@ -84,7 +94,7 @@
                                 {% if cotizacion.importacion_piezas%}
                                   <td>Incluido</td>
                                   <td></td>
-                                  <td>{{ cotizacion.prima_importacion|floatformat:2 }}</td>
+                                  <td>{{ cotizacion.prima_importacion|floatformat:2|intcomma }}</td>
                                 {% else %}
                                   <td>No Incluido</td>
                                   <td></td>
@@ -95,25 +105,37 @@
                                 <td>Acerta Preferencial Plus</td>
                                 <td>Incluido</td>
                                 <td></td>
-                                <td>{{ cotizacion.prima_preferencialPlus|floatformat:2 }}</td>
+                                <td>{{ cotizacion.prima_preferencialPlus|floatformat:2|intcomma }}</td>
                               </tr>
                             </table>
-                            <div class="text-right">
-                              <h5>Subtotal: ${{ cotizacion.subtotal|floatformat:2 }}</h5>
-                              <h5>Impuestos: ${{ cotizacion.impuestos|floatformat:2 }}</h5>
-                              <h5>Total a Pagar: ${{ cotizacion.total|floatformat:2 }}</h5>
-                              <h5>Prima Mensual: ${{ cotizacion.prima_mensual|floatformat:2 }}</h5>
-                              <h5>Prima Pago de Contado: ${{ cotizacion.prima_pagoContado|floatformat:2 }}</h5>
-                              <h5>Prima Pago ACH/Visa: ${{ cotizacion.prima_pagoVisa|floatformat:2 }}</h5>
+                            {% bootstrap_form_errors form %}
+                            <form action="" method="post" role="form" class="form-horizontal">
+                            <div class="col-md-5"></div>
+                            <div class="col-md-3">
+                                <h5><br></h5>
+                                <h5><br></h5>
+                                <h5><br></h5>
+                                <h5>{% bootstrap_field form.cuotas layout='horizontal' %}</h5>
+                                <h5><br></h5>
+                                <h5><br></h5>
+                                <h5><br></h5>
+                            </div>
+                            <div class="col-md-4 text-right">
+                              <h5><strong>Endoso:</strong> {{ cotizacion.endoso }}</h5>
+                              <h5>Subtotal: B/.{{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
+                              <h5>Impuestos: B/.{{ cotizacion.impuestos|floatformat:2|intcomma }}</h5>
+                              <h5>Total a Pagar: B/.{{ cotizacion.total|floatformat:2|intcomma }}</h5>
+                              <h5>Prima Mensual: B/.{{ cotizacion.prima_mensual|floatformat:2 }}</h5>
+                              <h5>Prima Pago de Contado: B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</h5>
+                              <h5>Prima Pago ACH/Visa: B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
                             </div>
                             <br>
                             <div class="col-md-12">
                               <div class="col-md-4"></div>
                               <div class="col-md-4 text-center">
-                                <a class="btn btn-success btn-lg" href="{% url 'conductor' %}">Volver a Cotizar</a>
+                                <a class="btn btn-success btn-lg" href="{% url 'vehiculo' %}">Volver a Cotizar</a>
                               </div>
                               <div class="col-md-4 text-right">
-                                <form action="" method="post" role="form" class="form-horizontal">
                                   {% csrf_token %}
                                   <button type="submit" class="btn btn-success btn-lg">
                                     ENVIAR
