--- a/cotizador_acerta/templates/cotizar/email_corredores.html
+++ b/cotizador_acerta/templates/cotizar/email_corredores.html
@@ -265,7 +265,7 @@
                                     <table width="540" border="0" cellpadding="0" cellspacing="0" align="center" style="text-align: center; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="fullCenter2">
                                         <tbody><tr>
                                             <td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 23px; color: rgb(63, 67, 69); line-height: 30px; font-weight: 100;" mc:edit="40">
-                                                <!--[if !mso]><!--><span style="font-family: 'proxima_novathin', Helvetica; font-weight: normal;"><!--<![endif]-->Estimado(a), {{cotizacion.corredor.name}} <!--[if !mso]><!--></span><!--<![endif]-->
+                                                <!--[if !mso]><!--><span style="font-family: 'proxima_novathin', Helvetica; font-weight: normal;"><!--<![endif]-->Estimado(a), {{cotizacion.corredor.first_name}} <!--[if !mso]><!--></span><!--<![endif]-->
                                             </td>
                                         </tr>
                                     </tbody></table>
